# protocache

./: .gitignore  CMakeLists.txt  README.md  data-format.md
.github/workflows/: cpp.yml  python.yml  typescript.yml
cmake/: ProtoCacheConfig.cmake.in  VerifyGenerated.cmake
include/: access.h  perfect_hash.h  serialize.h  utils.h
include/protocache/: access-ex.h  access.h  perfect_hash.h  reflection.h  serialize.h  utils.h
include/protocache/extension/: reflection.h  utils.h
include/protocache/protobuf/: any.pc-ex.h  any.pc.h  duration.pc-ex.h  duration.pc.h  timestamp.pc-ex.h  timestamp.pc.h  wrappers.pc-ex.h  wrappers.pc.h
python/: .gitignore  MANIFEST.in  README.md  benchmark.py  pyproject.toml  setup.py  smoke_test.py  typing_check.py
python/protocache/: __init__.py  __init__.pyi  _protocache.cc
src/: access.cc  hash.cc  hash.h  perfect_hash.cc  reflection.cc  serialize.cc  utils.cc
src/extension/: deserialize.cc  reflection.cc  serialize.cc  utils.cc
test/: .gitignore  floats.json  floats.proto  main.cc  perfect_hash.cc  protocache.cc  protocache_test.py  reflect-test.proto  test-alias.json  test-tiny.json  test.json  test.pc-ex.cc  test.pc-ex.h  test.pc.h  test.proto  test_pc.py
test/benchmark/: capnproto.cc  common.h  flatbuffers.cc  fory.cc  main.cc  protobuf.cc  protocache.cc  test-fb.json  test.capnp  test.fbs  test.fdl  test_fory.h  twitter.json.zst  twitter.proto
test/cmake-consumer/: CMakeLists.txt  main.cc
tools/: binary-to-json.cc  json-to-binary.cc  proto-gen-utils.h  protoc-gen-pc.net.cc  protoc-gen-pccx.cc  protoc-gen-pcjv.cc  protoc-gen-pcpy.cc  protoc-gen-pcts.cc  random-small.cc  random-small.pc-ex.cc  random-small.pc-ex.h  random-small.pc.h  random-small.proto
typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
typescript/benchmark/: benchmark.mjs  deserialize.mjs
typescript/scripts/: build-wasm.mjs  clean-output.mjs  test-browser.mjs  test-bundler.mjs  test-worker.mjs
typescript/src/: binary.ts  compiled-fields.ts  compiled-schema.ts  deserialize-tape.ts  deserialize.ts  index.ts  kind.ts  model.ts  schema.ts  serialize-arena.ts  serialize.ts  state.ts  wasm-runtime.ts
typescript/test/: contract.test.mjs  contract.types.ts  deserialize.test.mjs  generated-api.test.mjs  init-wasm.mjs  initialization.test.mjs  serialize.test.mjs  wasm-smoke.mjs
typescript/test/platform/: browser-entry.mjs  browser-worker.mjs  bundler-entry.mjs  node-worker.mjs
typescript/wasm/: CMakeLists.txt  decode_tape.cc  native_test.cc  protocache_wasm.cc  protocache_wasm.h  serialize_arena.cc
