[build-system]
requires = ["setuptools>=77.0.3", "packaging>=24.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocache"
version = "1.2.0"
description = "Format-compatible Python binding for the ProtoCache flat binary format"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Ruan Kunliang" },
]
keywords = ["protobuf", "serialization", "cache", "binary-format"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/PeterRK/ProtoCache"
Documentation = "https://github.com/PeterRK/ProtoCache/tree/main/python"
Repository = "https://github.com/PeterRK/ProtoCache.git"
Issues = "https://github.com/PeterRK/ProtoCache/issues"

[tool.setuptools]
packages = ["protocache"]
include-package-data = true

[tool.setuptools.package-data]
protocache = ["py.typed", "*.pyi"]

[tool.setuptools.exclude-package-data]
protocache = ["_protocache.cc"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
test-sources = ["python/smoke_test.py"]
test-command = "python python/smoke_test.py"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]
